# euc

./: Cargo.toml
src/: fixed_32.rs  lib.rs  math.rs  pipeline.rs  primitives.rs
src/rasterizer/: mod.rs  triangles.rs
src/sampler/: linear.rs  mod.rs  nearest.rs
