[package]
name = "euc"
version = "0.5.2"
description = "A software rendering crate that lets you write shaders with Rust"
authors = [
  "Joshua Barretto <joshua.s.barretto@gmail.com>",
  "Martin Sandfuchs <martin@cluginbuehl.ch>",
]
license = "Apache-2.0 AND MIT"
repository = "https://github.com/zesterer/euc"
readme = "README.md"
edition = "2018"
keywords = ["renderer", "3D", "graphics", "raster"]
exclude = ["/misc", "/misc/*"]

[dependencies]
vek = { git = "https://github.com/simmsb/vek", optional = true, version = "0.15.8", default-features = false }
image_ = { package = "image", version = "0.23", optional = true }
num_cpus = { version = "1.13", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
fxhash = { version = "0.2", optional = true }
micromath_ = { package = "micromath", version = "1.1", optional = true }

[features]
default = ["std", "image", "par"]
std = ["vek/std"]
libm = ["vek/libm"]
nightly = []
simd = ["vek/repr_simd"]
image = ["image_"]
par = ["std", "num_cpus", "crossbeam-utils", "fxhash"]
micromath = ["vek/micromath", "micromath_"]

[dev-dependencies]
minifb = "0.20"
wavefront = "0.1.3"
criterion = "0.3.3"
image_ = { package = "image", version = "0.23" }
derive_more = "0.99"

[lib]
bench = false

[[bench]]
name = "teapot"
harness = false
